# dusq-final-test-suit

./: CMakeLists.txt  README.md  nrf54l15dk_nrf54l15_cpuapp.overlay  prj.conf
.claude/: settings.local.json
boards/extensions/nrf54l15dk/: nrf54l15dk_nrf54l15_cpuapp.overlay
src/: bluetooth_manager.c  bluetooth_manager.h  ems_engine.c  ems_engine.h  io_adapter.c  io_adapter.h  npm1300.c  ppg.c  ppg.h  startup.c  startup.h  watchdog_heartbeat.c  watchdog_heartbeat.h
src/algo/: core_modules_f.c  core_modules_f.h  core_types.h  ppg_workspace_f.h  stim_logic_f.c  stim_logic_f.h  utility_f.c  utility_f.h
src/ble/: battery_module.c  bt_adv_helper.c  bt_adv_helper.h  hids_helper.c
src/drivers/as7058/: agc.c  agc.h  agc_hal.h  agc_typedefs.h  agc_version.h  as7058_agc_hal.c  as7058_app_manager.c  as7058_app_manager.h  as7058_app_manager_preprocessing.h  as7058_app_manager_typedefs.h  as7058_app_manager_version.h  as7058_bioz_app.h  as7058_bioz_app_typedefs.h  as7058_bioz_measurement.c  as7058_bioz_measurement.h  as7058_chiplib.c  as7058_chiplib.h  as7058_eda_app.c  as7058_eda_app.h  as7058_eda_app_typedefs.h  as7058_eda_scaling.c  as7058_eda_scaling.h  as7058_extract.c  as7058_extract.h  as7058_extract2.c  as7058_extract2.h  as7058_interface.c  as7058_interface.h  as7058_osal_chiplib.h  as7058_osal_chiplib_template.c  as7058_osal_chiplib_template.h  as7058_pd_offset_calibration.c  as7058_pd_offset_calibration.h  as7058_raw_app.c  as7058_raw_app.h  as7058_raw_app_typedefs.h  as7058_stream_app_ids.h  as7058_typedefs.h  (+23 more)
src/utilities/: median_calc.c  median_calc.h
(+3 files in other folders)
